[gd_scene load_steps=5 format=3 uid="uid://c0vrxs3ij3tqx"]

[ext_resource type="Script" path="res://scripts/rock_resource.gd" id="1_f8jx6"]
[ext_resource type="Texture2D" uid="uid://qvp5vhhv3gcs" path="res://assets/rock1.png" id="2_xhobv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24ttw"]
size = Vector2(205.714, 137.143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xotcy"]
size = Vector2(182.857, 102.857)

[node name="RockResource" type="Node2D" groups=["resources"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_f8jx6")

[node name="RockSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_xhobv")

[node name="RockArea" type="Area2D" parent="."]

[node name="RockCollision" type="CollisionShape2D" parent="RockArea"]
position = Vector2(-11.4286, 45.7143)
shape = SubResource("RectangleShape2D_24ttw")

[node name="InteractLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -8.0
offset_top = 32.0
offset_right = 1.0
offset_bottom = 55.0
text = "E"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-24, 88)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(12.5714, -36.5714)
shape = SubResource("RectangleShape2D_xotcy")

[connection signal="body_entered" from="RockArea" to="." method="_on_rock_area_body_entered"]
[connection signal="body_exited" from="RockArea" to="." method="_on_rock_area_body_exited"]
